logo and content updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>Amping - HTML 5 Template Preview</title>
+<title>ArtVenture</title>
 
 <!-- Fav Icon -->
 <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -73,7 +73,7 @@
             <div class="header-lower">
                 <div class="outer-box">
                     <div class="logo-box">
-                        <figure class="logo"><a href="#"><img src="assets/images/new-logo-2.jpg" alt="" style="width: 100px;"></a></figure>
+                        <figure class="logo"><a href="#"><img src="assets/images/logo-new-3.png" alt="" style="width: 100px;"></a></figure>
                         <ul class="social-links clearfix">
                             <!-- <li><a href="index-2.html"><i class="fab fa-twitter"></i></a></li> -->
                             <!-- <li><a href="#"><i class="fab fa-facebook-f"></i></a></li> -->
@@ -90,14 +90,7 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation scroll-nav clearfix">
-                                    <li class="dropdown"><a href="index-onepage.html">Home</a>
-                                        <ul>
-                                            <li><a href="#">Home Page One</a></li>
-                                            <li><a href="index-2.html">Home Page Two</a></li>
-                                            <li><a href="index-onepage.html">Home OnePage</a></li>
-                                            <li><a href="index-rtl.html">Home RTL</a></li>
-                                        </ul>
-                                    </li>
+                                    <li class="dropdown"><a href="index.html">Home</a></li>
                                     <li><a href="#feature">Feature</a></li>
                                     <li><a href="#about">About</a></li>
                                     <!-- <li><a href="#gallery">Gallery</a></li> -->
@@ -143,14 +136,14 @@
             <div class="close-btn"><i class="fas fa-times"></i></div>
             
             <nav class="menu-box">
-                <div class="nav-logo"><a href="#"><img src="assets/images/new-logo-2.jpg" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="#"><img src="assets/images/logo-new-3.png" alt="" title=""></a></div>
                 <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
                 <div class="contact-info">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li>Chicago 12, Melborne City, USA</li>
-                        <li><a href="tel:+8801682648101">+91 70222 93696</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li>Shoja, Himachal Pradesh</li>
+                        <li><a href="tel:+917022293696">+91 70222 93696</a></li>
+                        <li><a href="mailto:findartventure@gmail.com">findartventure@gmail.com</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -174,26 +167,28 @@
                     <div class="image-layer" style="background-image:url(assets/images/banner/bg-image-2.png)"></div>
                     <div class="auto-container">
                         <div class="content-box">
-                            <span>Join the Summer Adventure</span>
-                            <h2>Ready For a <br />Summer Camp</h2>
+                            <span>Join ArtVenture Now</span>
+                            <h2> 1st Edition: CAMP - ART - MENTAL - IZE</h2>
+                            <span>17, 18, 19 - May, Shoja, Himachal Pradesh</span>
                             <div class="btn-box">
                                 <a href="#" class="theme-btn btn-one">Discover More</a>
                             </div>
                         </div>  
                     </div>
                 </div>
-                <!-- <div class="slide-item style-two">
+                <div class="slide-item style-two">
                     <div class="image-layer" style="background-image:url(assets/images/banner/banner-2.jpg)"></div>
                     <div class="auto-container">
                         <div class="content-box">
-                            <span>Join the Summer Adventure</span>
-                            <h2>Ready For a <br />Summer Camp</h2>
+                            <span>Join ArtVenture Later</span>
+                            <h2> 2nd Edition: CAMP - ART - MENTAL - IZE</h2>
+                            <span>Coming Soon... </span>
                             <div class="btn-box">
                                 <a href="#" class="theme-btn btn-one">Discover More</a>
                             </div>
                         </div>  
                     </div>
-                </div> -->
+                </div>
             </div>
         </section>
         <!-- banner-section end -->
@@ -209,36 +204,36 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 feature-block">
                             <div class="feature-block-one">
                                 <div class="inner-box">
-                                    <div class="icon-box"><i class="flaticon-cottage"></i></div>
-                                    <h5>Private Cottages</h5>
-                                    <p>Discover serenity in our private cottages.</p>
+                                    <!-- <div class="icon-box"><i class="flaticon-cottage"></i></div> -->
+                                    <h5>Art Therapy</h5>
+                                    <p>Mural, clay and color theory.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 feature-block">
                             <div class="feature-block-one">
                                 <div class="inner-box">
-                                    <div class="icon-box"><i class="flaticon-tent-1"></i></div>
-                                    <h5>Tents on Rent</h5>
-                                    <p>Tents for rent: Your outdoor escape awaits.</p>
+                                    <!-- <div class="icon-box"><i class="flaticon-tent-1"></i></div> -->
+                                    <h5>Sound Therapy</h5>
+                                    <p>Sound healing and jam sessions.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 feature-block">
                             <div class="feature-block-one">
                                 <div class="inner-box">
-                                    <div class="icon-box"><i class="flaticon-military"></i></div>
-                                    <h5>Summer Camp</h5>
-                                    <p>Summer camp: where adventure begins!</p>
+                                    <!-- <div class="icon-box"><i class="flaticon-military"></i></div> -->
+                                    <h5>Movement Therapy</h5>
+                                    <p>Yoga contact improvement.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 feature-block">
                             <div class="feature-block-one">
                                 <div class="inner-box">
-                                    <div class="icon-box"><i class="flaticon-fire"></i></div>
-                                    <h5>Wood Fire</h5>
-                                    <p>Bonfire nights: sparks of joy.</p>
+                                    <!-- <div class="icon-box"><i class="flaticon-fire"></i></div> -->
+                                    <!-- <h5>Wood Fire</h5> -->
+                                    <p>And many more Euphoric endeavors</p>
                                 </div>
                             </div>
                         </div>
@@ -273,7 +268,7 @@
                             <div class="content-box">
                                 <div class="sec-title">
                                     <span class="sub-title">Our Introductions</span>
-                                    <h2>We’re Experienced Camp Organizer</h2>
+                                    <!-- <h2>We’re Experienced Camp Organizer</h2> -->
                                 </div>
                                 <div class="text">
                                     <p>A unique art therapy camp that invites you to escape the hustle of daily life and immerse yourself in a world of creativity and self-discovery. Nestled in the serene Himachal Pradesh, our camp offers a tranquil haven where you can rejuvenate your mind, body, and soul through the healing powers of art, music, and dance.</p>
@@ -308,7 +303,7 @@
             <div class="auto-container">
                 <div class="inner-box">
                     <div class="sec-title light">
-                        <span class="sub-title">Cmapning That’s Right For You</span>
+                        <span class="sub-title">Campning That’s Right For You</span>
                         <h2>Get Now Memorable Wonderful Outdoor Experiences</h2>
                     </div>
                     <div class="video-btn">
@@ -321,7 +316,7 @@
 
 
         <!-- feature-style-two -->
-        <section class="feature-style-two centred">
+        <!-- <section class="feature-style-two centred">
             <div class="auto-container">
                 <div class="row clearfix">
                     <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
@@ -356,7 +351,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- feature-style-two end -->
 
 
@@ -434,46 +429,6 @@
                                         <span class="designation">Kevin Martin</span>
                                     </div>
                                 </div>
-                                <!-- <div class="testimonial-content">
-                                    <div class="text">
-                                        <p>Lorem ipsum is simply free text dolor sit amet, nott adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    </div>
-                                    <div class="author-box">
-                                        <figure class="author-thumb"><img src="assets/images/resource/testimonial-2.jpg" alt=""></figure>
-                                        <span class="name">Kevin Martin</span>
-                                        <span class="designation">Kevin Martin</span>
-                                    </div>
-                                </div> -->
-                                <!-- <div class="testimonial-content">
-                                    <div class="text">
-                                        <p>Lorem ipsum is simply free text dolor sit amet, nott adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    </div>
-                                    <div class="author-box">
-                                        <figure class="author-thumb"><img src="assets/images/resource/testimonial-3.jpg" alt=""></figure>
-                                        <span class="name">Jessica Brown</span>
-                                        <span class="designation">Kevin Martin</span>
-                                    </div>
-                                </div> -->
-                                <!-- <div class="testimonial-content">
-                                    <div class="text">
-                                        <p>Lorem ipsum is simply free text dolor sit amet, nott adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    </div>
-                                    <div class="author-box">
-                                        <figure class="author-thumb"><img src="assets/images/resource/testimonial-2.jpg" alt=""></figure>
-                                        <span class="name">Kevin Martin</span>
-                                        <span class="designation">Kevin Martin</span>
-                                    </div>
-                                </div> -->
-                                <!-- <div class="testimonial-content">
-                                    <div class="text">
-                                        <p>Lorem ipsum is simply free text dolor sit amet, nott adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    </div>
-                                    <div class="author-box">
-                                        <figure class="author-thumb"><img src="assets/images/resource/testimonial-3.jpg" alt=""></figure>
-                                        <span class="name">Jessica Brown</span>
-                                        <span class="designation">Kevin Martin</span>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -502,7 +457,7 @@
                                         <li>CAMP - ART - MENTAL - IZE <br>Shoja, Himachal Pradesh </li>
                                         <!-- <li><i class="far fa-comments"></i><a href="blog-details.html">2 Comments</a></li> -->
                                     </ul>
-                                    <h3><a href="blog-details.html">Get Ready for the Summer Camp</a></h3>
+                                    <!-- <h3><a href="blog-details.html">Get Ready for the Summer Camp</a></h3> -->
                                 </div>
                             </div>
                         </div>
@@ -627,7 +582,7 @@
                             <h5>Send Email</h5>
                             <h3><a href="mailto:findartventure@gmail.com">findartventure@gmail.com</a></h3>
                         </div>
-                        <figure class="footer-logo"><a href="#"><img src="assets/images/new-logo-2.jpg" style="width: 100px;" alt=""></a></figure>
+                        <figure class="footer-logo"><a href="#"><img src="assets/images/logo-new-3.png" style="width: 100px;" alt=""></a></figure>
                         <div class="text">
                             <h5>Call Anytime</h5>
                             <h3><a href="tel:+917022293696">+91 70222 93696</a></h3>
@@ -691,7 +646,7 @@
                                 <div class="widget-content">
                                     <p>Click Here for Registion</p>
                                     <div class="btn-box">
-                                        <a href="#" class="theme-btn btn-one">Registration</a>
+                                        <a href="https://forms.gle/3c9KjBDqqF9qrzfm6" class="theme-btn btn-one">Register Here</a>
                                     </div>
                                 </div>
                             </div>
