new images added and gallery updated

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <div class="content_block_three">
                             <div class="content-box">
                                 <div class="sec-title">
-                                    <span class="sub-title">About Us</span>
+                                    <span class="sub-title">ArtVenture: Crafting Rich Experiences</span>
                                     <!-- <h2>We’re Experienced Camp Organizer</h2> -->
                                 </div>
                                 <div class="text">
@@ -362,10 +362,10 @@
             <div class="outer-container">
                 <div class="gallery-carousel owl-carousel owl-theme owl-nav-none owl-dots-none">
                     <div class="gallery-block-two">
-                        <!-- <div class="inner-box">
-                            <figure class="image"><img src="assets/images/new-images/Image-1.jpeg" alt=""></figure>
-                            <div class="view-btn"><a href="assets/images/new-images/Image-1.jpeg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
-                        </div> -->
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/new-images/Image-5.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/new-images/image-5.jpeg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
                     </div>
                     <div class="gallery-block-two">
                         <div class="inner-box">
@@ -385,11 +385,23 @@
                             <div class="view-btn"><a href="assets/images/new-images/Image-4.jpeg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
                         </div>
                     </div>
+                    <!-- <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/new-images/image-6.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/new-images/image-6.jpeg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div> -->
                     <div class="gallery-block-two">
-                        <!-- <div class="inner-box">
-                            <figure class="image"><img src="assets/images/gallery/gallery-9.jpg" alt=""></figure>
-                            <div class="view-btn"><a href="assets/images/gallery/gallery-9.jpg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
-                        </div> -->
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/new-images/image-9.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/new-images/image-9.jpeg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/new-images/image-8.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/new-images/image-8.jpeg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
                     </div>
                 </div>
             </div>
