--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&amp;display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
 
 <!-- Stylesheets -->
 <link href="assets/css/font-awesome-all.css" rel="stylesheet">
@@ -215,7 +216,7 @@
                         <div class="content_block_three">
                             <div class="content-box">
                                 <div class="sec-title">
-                                    <span class="sub-title">ArtVenture: Crafting Rich Experiences</span>
+                                    <span class="sub-title" style="color: teal !important;">ArtVenture: Crafting Rich Experiences</span>
                                     <!-- <h2>We’re Experienced Camp Organizer</h2> -->
                                 </div>
                                 <div class="text">
@@ -248,7 +249,7 @@
          <section class="feature-section" id="feature">
             <div class="bg-layer parallax-bg" data-parallax='{"y": 100}' style="background-image: url(assets/images/background/feature-bg.jpg);"></div>
             <div class="auto-container">
-                <h1 class="text-center" style="padding-bottom: 30px;">Camp-Art-Mentalize With Us!</h1>
+                <h1 class="text-center" style="padding-bottom: 30px;color: teal !important;">Camp-Art-Mentalize With Us!</h1>
                 <div class="inner-content wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="row clearfix">
                         <div class="col-lg-4 col-md-4 col-sm-12 feature-block">
@@ -416,8 +417,8 @@
                 <div class="row clearfix">
                     <div class="col-lg-3 col-md-12 col-sm-12 title-column">
                         <div class="sec-title">
-                            <span class="sub-title">Get To Know Us</span>
-                            <h3>Our visionary founders, Apooh Mahi, and Shreya Varakhedkar, have crafted a retreat that enriches the mind, body, and soul.</h3>
+                            <span class="sub-title" style="color: teal !important;">Get To Know Us</span>
+                            <h3 style="font-family: 'Amatic SC', cursive;">Our visionary founders, Apooh Mahi, and Shreya Varakhedkar, have crafted a retreat that enriches the mind, body, and soul.</h3>
                         </div>
                     </div>
                     <div class="col-lg-9 col-md-12 col-sm-12 inner-column">
