--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
         <section class="feature-style-two centred" id="gallery">
             <div class="outer-container">
                 <div class="gallery-carousel owl-carousel owl-theme owl-nav-none owl-dots-none">
-                    <!-- <div class="gallery-block-two">
+                    <div class="gallery-block-two">
                         <div class="inner-box">
                             <figure class="image"><img src="assets/images/new-images/Image-5.jpeg" alt=""></figure>
                             <div class="view-btn"><a href="assets/images/new-images/image-5.jpeg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="gallery-block-two">
                         <div class="inner-box">
                             <figure class="image"><img src="assets/images/new-images/Image-2.jpeg" alt=""></figure>
