--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation scroll-nav clearfix">
                                     <li class="dropdown"><a href="index.html">Home</a></li>
-                                    <li><a href="#feature">Feature</a></li>
                                     <li><a href="#about">About</a></li>
-                                    <!-- <li><a href="#gallery">Gallery</a></li> -->
-                                    <li><a href="#testimonial">Testimonial</a></li>
-                                    <li><a href="#news">News</a></li>
+                                    <li><a href="#feature">Feature</a></li>
+                                    <li><a href="#gallery">Gallery</a></li>
+                                    <li><a href="#testimonial">Founders</a></li>
+                                    <!-- <li><a href="#news">News</a></li> -->
                                 </ul>
                             </div>
                         </nav>
@@ -613,10 +613,11 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul class="links-list clearfix">
-                                        <li><a href="#">About</a></li>
-                                        <li><a href="#">What We Do</a></li>
+                                        <li><a href="#about">About</a></li>
+                                    <li><a href="#feature">Feature</a></li>
+                                    <li><a href="#gallery">Gallery</a></li>
                                         <!-- <li><a href="#">Testimonial</a></li> -->
-                                        <li><a href="#">Contact</a></li>
+                                        <!-- <li><a href="#">Contact</a></li> -->
                                     </ul>
                                 </div>
                             </div>
